[package]
name = "creole-nom"
version = "0.1.1"
authors = ["chidea"]
edition = "2018"
license = "MIT"
description = "WikiCreole markup language parser library by nom"
repository = "https://github.com/chidea/creole-nom"
readme = "README.md"
keywords = ["wiki", "markdown", "parser", "creole", "nom"]
categories = ["parser-implementations"]
exclude = [ "*.sh" ]
[dependencies]
nom = "6.0.0-alpha1"
